--- a/frontend/twitterclone/src/components/Feedback.css
+++ b/frontend/twitterclone/src/components/Feedback.css
@@ -65,7 +65,7 @@ form button {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     font-size: 16px;
-    color: white;
+    color: grey;
     font-weight: 500;
     margin-top: 25px;
     transition: background-color 0.3s ease;
